Wayland protocol error with Linux display scaling: wl_surface@86: error 2: Buffer size (989x379) must be an integer multiple of the buffer_scale (2).
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox119 | --- | fixed |
People
(Reporter: jean-louis, Assigned: stransky)
References
(Blocks 1 open bug)
Details
(Whiteboard: [snnot3p])
Crash Data
Attachments
(6 files)
Steps to reproduce:
When running Thunderbird on a (fractional) scaled display, it sometimes crashes with "[GFX1-]: Wayland protocol error: wl_surface@86: error 2: Buffer size (989x379) must be an integer multiple of the buffer_scale (2)."
This seems to mostly/always happen on calendar dialogs.
If you open Thunderbird on wayland but unscaled display, it just works.
This occurs at least on 102.11.0 as on the latest 115 nightly.
Updated•3 years ago
|
I can reliably reproduce this on my system. Every time I open the message compose window while my laptop is connected to an external monitor set to 200% scale, I get thsi crash. Here's my setup:
Laptop with AMD CPU and embedded graphics, 4k internal display set to 200% scale, 4k external display set to 100% scale. I'm running an up-to-date archlinux using gnome. My thunderbird version is 102.11.2.
The bug disappears as soon as I disconnect the external display.
| Reporter | ||
Comment 2•2 years ago
•
|
||
Firefox had the same issue it seems -> bug 1795851
And it got fixed there :)
Comment 3•2 years ago
|
||
Bug 1795851 landed in firefox 109, so it is already included in THunderbird 115.
If the problem exists today in a current version of Firefox, then a new bug report is needed for Firefox.
| Reporter | ||
Comment 4•2 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #3)
Bug 1795851 landed in firefox 109, so it is already included in THunderbird 115.
If the problem exists today in a current version of Firefox, then a new bug report is needed for Firefox.
Never had it in firefox at least. But it depends on the window size for it to occur.
In Thunderbird it seems to be caused by the agenda event notification window.
So most likely it just doesn't happen in firefox?
Comment 5•2 years ago
|
||
Kindly asking help to stransky to see if there's anything we need to port for Thunderbird
| Assignee | ||
Comment 6•2 years ago
|
||
May be a variant of Bug 1832499. Can you attach about:support from Firefox running on the same system?
Also which Wayland compositor / environment do you use?
| Assignee | ||
Updated•2 years ago
|
| Reporter | ||
Comment 7•2 years ago
|
||
Attached the firefox about:support data.
Running gnome with mutter on Arch (so up-to-date gnome)
| Assignee | ||
Comment 8•2 years ago
|
||
Do you see that in Firefox too or is that TB only issue?
Can you create a screencast of the issue?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Collect_information_for_a_bug_report
Thanks.
| Reporter | ||
Comment 9•2 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #8)
Do you see that in Firefox too or is that TB only issue?
Can you create a screencast of the issue?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Collect_information_for_a_bug_report
Thanks.
I don't have the issue in FF, but that doesn't mean it doesn't exist in FF.
On TB the issue seems to be triggered by displaying the event notification/reminder window (and it doesn't always happen). Otherwise TB doesn't crash neither (or at least not that I found yet).
A screencast is fairly useless I guess? As it just crashes without showing any UI (or maybe for some milliseconds).
I don't know if there is a better way to debug the root cause? Can I gdb it with some useful breakpoint or so when it crashes?
Comment 10•2 years ago
|
||
I made a screencast of the issue.
I am on Gnome 44.3 on a multi-monitor setup with 100% and 200% integer scaling (fractional scaling not enabled).
| Assignee | ||
Comment 11•2 years ago
|
||
Cool! Can you please run tb on terminal as:
MOZ_LOG="Widget:5 WidgetPopup:5 WidgetWayland:5" thunderbird > log.txt 2>&1
reproduce the issue and attach the log here?
Thanks.
Comment 12•2 years ago
|
||
| Assignee | ||
Comment 13•2 years ago
|
||
Thanks. Looks like general toolkit bug in window handling. I wonder why we don't see that in Firefox.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 14•2 years ago
|
||
That's weird, we're getting wrong window sizes from system directly. It's Gnome 44.3, I'm on 44.2 right now (Fedora 38) but I can't reproduce it.
| Assignee | ||
Comment 15•2 years ago
|
||
So no, looks like we don't update GtkCompositorWidget after scale change.
| Assignee | ||
Comment 16•2 years ago
|
||
Can you please run as:
WAYLAND_DEBUG=1 MOZ_LOG="Widget:5 WidgetPopup:5 WidgetWayland:5" thunderbird > log.txt 2>&1
reproduce the issue and attach the log here?
Thanks.
| Assignee | ||
Comment 18•2 years ago
|
||
Thanks. Looks like delayed EGLWindow size set call. Let's wait when more logging is available from Bug 1844543.
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 19•2 years ago
|
||
Is there thunderbird based on latest nightly?
I'd need a log from build with extended logging patch (https://phabricator.services.mozilla.com/D184121).
Thanks.
| Assignee | ||
Updated•2 years ago
|
Comment 20•2 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #19)
Is there thunderbird based on latest nightly?
I'd need a log from build with extended logging patch (https://phabricator.services.mozilla.com/D184121).
Thanks.
Yes, there is.
Jean-Louis, max, jaseg
you will want to install 117.0a1 from https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central/
Comment 21•2 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #20)
Jean-Louis, max, jaseg
you will want to install 117.0a1 from https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central/
Played around with 117.0a1 and reproduced the issue.
Comment 22•2 years ago
|
||
There was also a crash report: https://crash-stats.mozilla.org/report/index/01dc80c7-f899-499c-bfa5-57ab10230727
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 23•2 years ago
|
||
Depends on D184181
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 24•2 years ago
|
||
Comment 25•2 years ago
|
||
Backed out for causing multiple failures on Linux WebRender
Comment 26•2 years ago
|
||
There is an r+ patch which didn't land and no activity in this bug for 2 weeks.
:stransky, could you have a look please?
If you still have some work to do, you can add an action "Plan Changes" in Phabricator.
For more information, please visit BugBot documentation.
Updated•2 years ago
|
| Assignee | ||
Comment 27•2 years ago
|
||
Yes, we need to pass it through testsuite.
Comment 29•2 years ago
|
||
Copying crash signatures from duplicate bugs.
Comment 30•2 years ago
|
||
Comment 31•2 years ago
|
||
| bugherder | ||
| Assignee | ||
Updated•2 years ago
|
| Reporter | ||
Comment 32•2 years ago
|
||
Can this get backported to Thunderbird 115.x also?
| Assignee | ||
Comment 33•2 years ago
|
||
(In reply to Jean-Louis Dupond from comment #32)
Can this get backported to Thunderbird 115.x also?
You'd need to backport Bug 1844543 too.
| Reporter | ||
Comment 34•2 years ago
|
||
Any chance this will get backported? Still having crashes daily because of this.
Would be great if it was included in the stable series.
| Assignee | ||
Comment 35•2 years ago
|
||
(In reply to Jean-Louis Dupond from comment #34)
Any chance this will get backported? Still having crashes daily because of this.
Would be great if it was included in the stable series.
Where do you have the crashes? It should be in latest stable Firefox included (120.0).
| Reporter | ||
Comment 36•2 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #35)
(In reply to Jean-Louis Dupond from comment #34)
Any chance this will get backported? Still having crashes daily because of this.
Would be great if it was included in the stable series.Where do you have the crashes? It should be in latest stable Firefox included (120.0).
In Thunderbird that is. Running 115.5.0 (64-bit).
| Assignee | ||
Comment 37•2 years ago
|
||
I don't think the single patch here will fix it. We landed series of patches for it and it may be complicated to backport all of them.
Description
•