Bug 1832760 [Wayland] Adjust EGL window size according to scale factor r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D185000